--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/estilos.css">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <form action="" class="formulario">
-    <input type="file" id="file1" />
-    <input type="file" id="file2" />
-</form>
-   
-<div class="comparador">
-    <button id="compare" class="btn">Comparar</button>
-    <div id="result"></div>
-</div>
-<script src="src/index.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <header>
+        <h1>hola mundo</h1>
+    </header>
+    <div class="container">
+       <button class="btn" id="btn">validar</button>
+       <button class="local" id="local">localstorage</button>
+    </div>
 </body>
 </html>
